--- a/.github/workflows/version_update.yml
+++ b/.github/workflows/version_update.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            src/main.py
+            src/engine.py
             docs/source/conf.py
           sparse-checkout-cone-mode: false
       - name: Check if version has changed
@@ -47,7 +47,7 @@ jobs:
         run: |
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@users.noreply.github.com'
-          git add src/main.py
+          git add src/engine.py
           git add docs/source/conf.py
           git commit -m "Update release version to ${{ github.event.inputs.version }}"
           git push
